--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <header>
+    <h1>Travel & Activities</h1>
+  </header>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#destinations">Destinations</a></li>
+        <li><a href="#activities">Activities</a></li>
+        <li><a href="#contact">Contact us</a></li>
+      </ul>
+    </nav>
+
+    <!-- Home Section -->
+    <section>
+      <h2>Home</h2>
+      <p>text</p>
+      <p>text</p>
+    </section>
+
+    <!-- destinations section -->
+    <section id="destinations">
+      <h2>Fun Destinations</h2>
+      <p>text</p>
+      <p>text</p>
+      <img src="image goes here" alt="" />
+      <img src="image goes here" alt="" />
+    </section>
+
+    <!-- Activities Section -->
+    <section id="activities">
+      <h2>Activities</h2>
+      <p>text here</p>
+      <p>text here</p>
+      <ul>
+        <li>hiking</li>
+        <li>skiing</li>
+        <li>swimming</li>
+      </ul>
+    </section>
+
+    <!-- Contact us Section -->
+    <section id="contact"></section>
+    <h2>Contact Us</h2>
+
+    <form action="/submit" method="post">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" /><br />
+
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="email" /><br />
+
+      <label for="message">Message</label>
+      <textarea name="message" id="message" cols="30" rows="10"></textarea
+      ><br />
+
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
 </html>
