--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li><a href="#activities">Activities</a></li>
         <li><a href="#contact">Contact us</a></li>
       </ul>
+      <button id="fetchData">Fetch data from TripAdvisor</button>
+      <div id="output"></div>
     </nav>
 
     <!-- Home Section -->
@@ -63,5 +65,6 @@
 
       <input type="submit" value="Submit" />
     </form>
+    <script src="/Assets/script.js"></script>
   </body>
 </html>
