Adding styling to header and navbar

--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <title>Document</title>
   </head>
-  <header>
-    <h1>Travel & Activities</h1>
-  </header>
   <body>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#destinations">Destinations</a></li>
-        <li><a href="#activities">Activities</a></li>
-        <li><a href="#contact">Contact us</a></li>
-      </ul>
-      <button id="fetchData">Fetch data from TripAdvisor</button>
-      <div id="output"></div>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="#home">
+          <h1 class="title">Travel & Activities</h1>
+        </a>
+      </div>
+      
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-end">
+          <a class="navbar-item" href="#home">Home</a>
+          <a class="navbar-item" href="#destinations">Destinations</a>
+          <a class="navbar-item" href="#activities">Activities</a>
+          <a class="navbar-item" href="#contact">Contact us</a>
+        </div>
+      </div>
     </nav>
+
 
     <!-- Home Section -->
     <section>
