corected the script.js link in html file and added my own js file to work on

--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
 
       <input type="submit" value="Submit" />
     </form>
-    <script src="/Assets/script.js"></script>
+    <script src="./Assets/script.js"></script>
   </body>
 </html>
