--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="Assets/css/style.css">
     <title>Document</title>
   </head>
   <body>
@@ -54,7 +55,7 @@
     </section>
 
     <!-- Contact us Section -->
-    <section id="contact"></section>
+    <section id="contact" class="contact-form">
     <h2>Contact Us</h2>
 
     <form action="/submit" method="post">
@@ -66,7 +67,8 @@
 
       <label for="message">Message</label>
       <textarea name="message" id="message" cols="30" rows="10"></textarea
-      ><br />
+      ><br /></form>
+      </section>
 
       <input type="submit" value="Submit" />
     </form>
