--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <title>Document</title>
+    <title>Travel Project</title>
   </head>
   <body>
-    <nav>
-      <div>
-        <a href="#home">
-          <h1>Travel & Activities</h1>
-        </a>
-      </div>
-      
-      <div>
-        <div>
-          <a href="#home">Home</a>
-          <a href="#destinations">Destinations</a>
-          <a href="#activities">Activities</a>
-          <a href="#contact">Contact us</a>
+    <nav class="navbar is-link">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="#" style="font-weight:bold;">
+            Seamless Booking
+          </a>
+          <span class="navbar-burger" data-target="navbarMenu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navMenu" class="navbar-menu">
+          <div class="navbar-start">
+            <a href="#" class="navbar-item is-active">Home</a>
+            <a href="#" class="navbar-item">Hotels</a>
+            <a href="#" class="navbar-item">Destination</a>
+            <a href="#" class="navbar-item">Contact Us</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -32,18 +38,18 @@
       <p>text</p>
     </section>
 
-    <!-- destinations section -->
-    <section id="destinations">
-      <h2>Fun Destinations</h2>
+    <!-- Hotels section -->
+    <section id="Hotels">
+      <h2>Hotels</h2>
       <p>text</p>
       <p>text</p>
       <img src="image goes here" alt="" />
       <img src="image goes here" alt="" />
     </section>
 
-    <!-- Activities Section -->
-    <section id="activities">
-      <h2>Activities</h2>
+    <!-- Destinations Section -->
+    <section id="Destinations">
+      <h2>Destinations</h2>
       <p>text here</p>
       <p>text here</p>
       <ul>
