--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
         <div id="navMenu" class="navbar-menu">
           <div class="navbar-start">
-            <a href="#" class="navbar-item is-active">Home</a>
-            <a href="#" class="navbar-item">Hotels</a>
-            <a href="#" class="navbar-item">Destination</a>
-            <a href="#" class="navbar-item">Contact Us</a>
+            <a href="#Home" class="navbar-item is-active">Home</a>
+            <a href="#Hotels" class="navbar-item">Hotels</a>
+            <a href="#Destinations" class="navbar-item">Destination</a>
+            <a href="#Contact" class="navbar-item">Contact Us</a>
           </div>
         </div>
       </div>
@@ -32,7 +32,7 @@
 
 
     <!-- Home Section -->
-    <section>
+    <section id="Home">
       <h2>Home</h2>
       <p>text</p>
       <p>text</p>
@@ -60,7 +60,7 @@
     </section>
 
     <!-- Contact us Section -->
-    <section id="contact" class="contact-form">
+    <section id="Contact" class="contact-form">
     <h2>Contact Us</h2>
 
     <form action="/submit" method="post">
