--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="navMenu" class="navbar-menu">
           <div class="navbar-start">
-            <a href="#Home" class="navbar-item is-active">Home</a>
+            <a href="#Home" class="navbar-item is-active">About Us</a>
             <a href="#Hotels" class="navbar-item">Hotels</a>
             <a href="#Destinations" class="navbar-item">Destination</a>
             <a href="#Contact" class="navbar-item">Contact Us</a>
@@ -32,15 +32,16 @@
 
 
     <!-- Home Section -->
-    <section id="Home">
-      <h2>Home</h2>
-      <p>text</p>
-      <p>text</p>
+    <section id="Home" class="section is-medium"  class="container my-5 mt-5 mx-5 px-5">
+      <h2 class="title is-2 is-capitalized">Seamless Booking</h2>
+      <h3>Your journey, your way.</h3>
+      <p>Every traveler is unique, and so are your interests. Customize your itinerary with precision, from sightseeing tours and dining reservations to transportation arrangements.</p>
+      <p>Our user-friendly platform empowers you to craft detailed itineraries effortlessly. Whether you're a solo adventurer, couple on a romantic getaway, or planning a family vacation, our intuitive interface accommodates your travel style.</p>
     </section>
 
     <!-- Hotels section -->
-    <section id="Hotels">
-      <h2>Hotels</h2>
+    <section id="Hotels"  class="section is-medium" class="container my-5 mt-5 mx-5 px-5">
+      <h2 class="title is-2 is-capitalized">Hotels</h2>
       <p>text</p>
       <p>text</p>
       <img src="image goes here" alt="" />
@@ -48,19 +49,34 @@
     </section>
 
     <!-- Destinations Section -->
-    <section id="Destinations">
-      <h2>Destinations</h2>
-      <p>text here</p>
-      <p>text here</p>
-      <ul>
-        <li>hiking</li>
-        <li>skiing</li>
-        <li>swimming</li>
-      </ul>
+    <section id="Destinations" class="section is-medium" class="container my-5 mt-5 mx-5 px-5">
+      <h2  class="title is-2 is-capitalized">Destinations</h2>
+      <div class="field has-addons">
+        <div class="control is-expanded">
+          <div class="select is-fullwidth">
+            <select name="country">
+              <option value="Argentina">Argentina</option>
+              <option value="Bolivia">Bolivia</option>
+              <option value="Brazil">Brazil</option>
+              <option value="Chile">Chile</option>
+              <option value="Colombia">Colombia</option>
+              <option value="Ecuador">Ecuador</option>
+              <option value="Guyana">Guyana</option>
+              <option value="Paraguay">Paraguay</option>
+              <option value="Peru">Peru</option>
+              <option value="Suriname">Suriname</option>
+              <option value="Uruguay">Uruguay</option>
+              <option value="Venezuela">Venezuela</option>
+            </select>
+          </div>
+        </div>
+        <div class="control">
+          <button type="submit" class="button is-link">Choose</button>
+        </div>
     </section>
 
     <!-- Contact us Section -->
-    <div class="container my-5 mt-5 mx-5 px-5">
+    <div class="container my-5 mt-5 mx-5 px-5"  class="section is-medium">
       <h2 class="title is-2 is-capitalized" id="Contact">Contact Us</h2>
 
       <form action="" method="post">
