--- a/index.html
+++ b/index.html
@@ -9,18 +9,11 @@
   <body>
     <nav>
       <div>
-        <a href="#home">
-          <h1>Travel & Activities</h1>
-        </a>
       </div>
 
       <div>
         <div>
-          <a href="#home">Home</a>
-          <a href="#destinations">Destinations</a>
-          <a href="#activities">Activities</a>
-          <a href="#contact">Contact us</a>
-
+          <!--Nav Bar -->
     <nav class="navbar is-link">
       <div class="container">
         <div class="navbar-brand">
