--- a/index.html
+++ b/index.html
@@ -127,5 +127,6 @@
 
     <script src="/Assets/script.js"></script>
     <script src="./Assets/js/yelpApiScript.js"></script>
+        <script src="/Assets/js/hotel.js"></script>
   </body>
 </html>
