working through brain mess, trying to find a working API

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<!DOCTYPE html>
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -128,4 +137,4 @@
     <script src="/Assets/script.js"></script>
     <script src="./Assets/js/yelpApiScript.js"></script>
   </body>
-</html>
+</html> -->
