All the mess I've worked through, still not being able to get anything to work but want it known that I am trying

--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-
-
-
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -22,7 +13,7 @@
 
       <div>
         <div>
-          <!--Nav Bar -->
+        
     <nav class="navbar is-link">
       <div class="container">
         <div class="navbar-brand">
@@ -45,7 +36,7 @@
 
         </div>
       </div>
-    </nav>
+    </nav> 
 
 
     <!-- Home Section -->
