text input in html and css, search bar created and position home section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
       <p>Our user-friendly platform empowers you to craft detailed itineraries effortlessly. Whether you're a solo adventurer, couple on a romantic getaway, or planning a family vacation, our intuitive interface accommodates your travel style.</p>
     </section>
 
+        <!-- Search Bar -->
+        <div class="container">
+          <div class="search">
+            <input type="text" class="searchTerm" id="searchBar" placeholder="Where do you want to go?">
+            <button type="submit" class="searchButton" id="searchBtn">
+              <i class="fa fa-search"></i>
+            </button>
+          </div>
+        </div>
+    
     <!-- Hotels section -->
     <section id="Hotels"  class="section is-medium" class="container my-5 mt-5 mx-5 px-5">
       <h2 class="title is-2 is-capitalized">Hotels</h2>
@@ -90,6 +100,7 @@
           <button type="submit" class="button is-link">Choose</button>
         </div>
     </section>
+
 
     <!-- Contact us Section -->
     <div class="container my-5 mt-5 mx-5 px-5"  class="section is-medium">
