created booking.com js file, linked working api with response of 200, pixabay results === 200

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <h2 class="title is-2 is-capitalized">Hotels</h2>
       <p>text</p>
       <p>text</p>
-      <img src="image goes here" alt="" />
-      <img src="image goes here" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
     </section>
 
 
@@ -169,7 +169,7 @@
 
 
 
-    <script src="/Assets/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
     <script src="./Assets/js/yelpApiScript.js"></script>
       <script src="/Assets/js/hotel.js"></script>
       <script src="/Assets/js/bulma.js"></script>
