Added link to html for my js file

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     <script src="./Assets/js/yelpApiScript.js"></script>
       <script src="/Assets/js/hotel.js"></script>
       <script src="/Assets/js/bulma.js"></script>
+      <script src="./Assets/js/CurrencyExchange.js"></script>
 
 
   </body>
