added displaySaved id for local storage purposes, added local.js for local storage

--- a/index.html
+++ b/index.html
@@ -127,6 +127,6 @@
 
     <script src="./Assets/js/images.js"></script>
     <script src="./Assets/js/Booking.js"></script>
-
+    <script src="./local.js"></script>
 </body>
 </html>
