BootStrap styling and recent search buttons added

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
         <div id="imageResults"></div>
       </div>
     </section>
-
-    <script src="./Assets/js/images.js"></script>
     <script src="./Assets/js/Booking.js"></script>
+    <script src="./Assets/js/images.js"></script>
+    <!-- <script src="./Assets/js/Booking.js"></script> -->
 
 </body>
 </html>
