implement input validation and local storage functionality. Added input validation to ensure that both city and country fields are filled before saving data to local storage. Created functions to save and retreive data from local storage. Also, implemented the display of saved data on the webpage.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
         <div id="hotelContainer">
           <!-- Hotel information will be displayed here -->
+          <ul id="displaySaved"></ul>
         </div>
       </div>
     </section>
