--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <label class="label">Country</label>
           <div class="control">
             <input class="input" type="text" id="country-input" placeholder="Enter country name">
+            <div id="country-suggestion-box" class="suggestion-box"></div>
           </div>
         </div>
 
@@ -111,6 +112,7 @@
               <div class="control">
                 <!-- City input feild -->
                 <input class="input mb-4" type="text" id="cityInput" placeholder="e.g., New York">
+                <div id="city-suggestion-box" class="suggestion-box"></div>
               </div>
             </div>
             <div class="field">
