- Added code to retrieve and display travel search history from local storage. - Implemented dynamic suggestions based on user input in both city and country fields. - Improved user experience by clearing and hiding suggestion boxes when a suggestion is clicked.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <label class="label">Country</label>
           <div class="control">
             <input class="input" type="text" id="country-input" placeholder="Enter country name">
-            <div id="country-suggestion-box" class="suggestion-box"></div>
+            <div id="suggestionBox2" class="suggestion-box"></div>
           </div>
         </div>
 
@@ -112,7 +112,7 @@
               <div class="control">
                 <!-- City input feild -->
                 <input class="input mb-4" type="text" id="cityInput" placeholder="e.g., New York">
-                <div id="city-suggestion-box" class="suggestion-box"></div>
+                <div id="suggestionBox1" class="suggestion-box"></div>
               </div>
             </div>
             <div class="field">
@@ -130,6 +130,6 @@
 
     <script src="./Assets/js/images.js"></script>
     <script src="./Assets/js/Booking.js"></script>
-    <script src="./local.js"></script>
+    <script src="./Assets/js/local.js"></script>
 </body>
 </html>
