Add conditional check to prevent duplicate searches and create travelSearch object

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
           </div>
         </div>
-        <div id="hotelContainer" class="show2"><p>Recent Searches</p>
+        <div id="imageContainer" class="show2"><p>Recent Searches</p>
           <!-- Hotel information will be displayed here -->
           <ul id="displaySaved"></ul>
         </div>
